// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuComponent renders 1`] = `
<tf-menu>
  <mock:shadow-root>
    <div class="menu">
      <tf-button size="icon" title="menu">
        <tf-icon icon="menu"></tf-icon>
      </tf-button>
    </div>
  </mock:shadow-root>
</tf-menu>
`;

exports[`MenuComponent renders with values 1`] = `
<tf-menu active="secondary">
  <mock:shadow-root>
    <div class="menu">
      <tf-button size="icon" title="menu">
        <tf-icon icon="menu"></tf-icon>
      </tf-button>
    </div>
  </mock:shadow-root>
</tf-menu>
`;
